Changes for 0.10.2:

* Fixed issue #73: Replace usage of preprocessor `WIN32` by `_WIN32`.
* Fixed issue #74: Silence warning C4996 about deprecated 'std::tr1' namespace.


Changes for 0.10.1:

* Fixed issue #71: ra::filesystem::FileExists() fails when file size > 4GB
* Fixed issue #72: ra::filesystem::IsDirectoryEmpty()


Changes for 0.10.0:

* Fixed issue #70: Discrete timing functions.


Changes for 0.9.2:

* Fixed issue #68: Simplify building process with scripts and INSTALL documentation (again).
* Fixed issue #69: Building with spaces in path.


Changes for 0.9.1:

* Fixed issue #67: Simplify building process with scripts and INSTALL documentation.


Changes for 0.9.0:

* Fixed issue #55: Doesn't work on mac.
* Fixed issue #59: HasReadAccess() and HasWriteAccess() for directories.
* Fixed issue #60: Migrate CI/CD services to GitHub Actions.
* Fixed issue #61: ra::testing::CloneProcessFile()
* Fixed issue #62: Refactor how unit test TestProcess.testKillAndTerminate is implemented.
* Fixed issue #64: Include of windows.h conflicts with RapidAssist function names.
* Fixed issue #65: Uniformalize function argument names.


Changes for 0.8.3:

* Fixed issue #58: Compilation fail: environment.cpp:142:5: error: ‘LPCH’ was not declared in this scope #58


Changes for 0.8.2:

* Fixed issue #54: Exception when calling ra::environment::GetEnvironmentVariablesUtf8()
* Fixed issue #57: Updated INSTALL documentation for using the build scripts.


Changes for 0.8.1:

* Fixed issue #53: Warning C4267 (possible loss of data) in filesystem.cpp when building in 64 bit.


Changes for 0.8.0:

* Fixed issue #49: Create ra::unicode namespace to wrap functions that provide support to unicode.
* Fixed issue #50: Support for Windows Unicode (a.k.a. UTF-16).
* Fixed issue #51: Function in `ra::testing` namespace are lacking documentation.
* Fixed issue #52: Enable functions in `ra::testing` even if gtest library is not available.


Changes for 0.7.0:
 